@@ -61,7 +61,7 @@ void test4()
   ec.solve();
 }
 
-/// CES test problem from Eaves and Schmedders (rational form).
+/// CES test problem from Eaves and Schmedders (rational-rational form).
 /// Has 3 solutions (one real-valued):
 ///
 ///   p = (0.951883, 0.048117)
@@ -70,7 +70,7 @@ void test4()
 
 void test5()
 {
-  CES ec(2, 2, 0.5);
+  RationalRationalCES ec(2, 2);
 
   ec.a[0][0] = 4.0; ec.a[0][1] = 1.0;
   ec.a[1][0] = 1.0; ec.a[1][1] = 4.0;
@@ -85,7 +85,7 @@ void test5()
   ec.solve();
 }
 
-/// CES test problem from Eaves and Schmedders (polynomial form)
+/// CES test problem from Eaves and Schmedders (polynomial-rational form)
 /// Has 3 solutions (one real-valued):
 ///
 ///   p = (0.951883, 0.048117)
@@ -94,7 +94,7 @@ void test5()
 
 void test6()
 {
-  PolynomialCES ec(2, 2, 0.5);
+  PolynomialRationalCES ec(2, 2);
 
   ec.a[0][0] = 4.0; ec.a[0][1] = 1.0;
   ec.a[1][0] = 1.0; ec.a[1][1] = 4.0;
@@ -104,6 +104,32 @@ void test6()
   
   ec.b[0] = 0.2;
   ec.b[1] = 0.2;    
+
+  ec.disp();
+  ec.solve();
+}
+
+/// CES test problem from Eaves and Schmedders (polynomial-integer form)
+/// Has 3 solutions (one real-valued):
+///
+///   p = (0.951883, 0.048117)
+///   p = (0.026816 + 0.309611*i, 0.973184 - 0.309611*i)
+///   p = (0.026816 - 0.309611*i, 0.973184 + 0.309611*i)
+
+void test7()
+{
+  PolynomialIntegerCES ec(2, 2);
+
+  ec.a[0][0] = 4.0; ec.a[0][1] = 1.0;
+  ec.a[1][0] = 1.0; ec.a[1][1] = 4.0;
+  
+  ec.w[0][0] = 10.0; ec.w[0][1] =  1.0;
+  ec.w[1][0] =  1.0; ec.w[1][1] = 12.0;
+  
+  ec.beta[0] = 1;
+  ec.beta[1] = 1;
+
+  ec.alpha = 5;
 
   ec.disp();
   ec.solve();
@@ -113,7 +139,7 @@ void test6()
 /// Has one unique solution: p = (0.5, 0.5)
 /// (Also p = (0, 1) with first equation removed)
 
-void test7()
+void test8()
 {
   Leontief ec(2, 2);
 
@@ -131,7 +157,7 @@ void test7()
 /// Has one unique solution: p = (0.5, 0.5)
 /// (Also p = (0, 1) with first equation removed)
 
-void test8()
+void test9()
 {
   PolynomialLeontief ec(2, 2);
 
@@ -151,7 +177,7 @@ void test8()
 ///   p = (1, 1)
 ///   p = (-2149/600, 1) = (-3.581667, 1)
 
-void test9()
+void test10()
 {
   Polemarchakis ec;
   ec.solve();
@@ -163,7 +189,7 @@ void test9()
 ///   p = (1, 1)
 ///   p = (-2149/600, 1) = (-3.581667, 1)
 
-void test10()
+void test11()
 {
   PolynomialPolemarchakis ec;
   ec.solve();
@@ -182,9 +208,25 @@ int main()
   dolfin_set("homotopy divergence tolerance", 10.0);
   dolfin_set("homotopy randomize", false);
 
-  //dolfin_set("monitor convergence", true);
-
-  test4();
+  // Test  1: CES test problem from Eaves and Schmedders (rational-rational form).
+  // Test  2: CES test problem from Eaves and Schmedders (polynomial-rational form)
+  // Test  3: CES test problem from Eaves and Schmedders (rational-integer form)
+  // Test  4: CES test problem from Eaves and Schmedders (polynomial-integer form)
+  // Test  5: CES test problem from Eaves and Schmedders (rational-rational form).
+  // Test  6: CES test problem from Eaves and Schmedders (polynomial-rational form)
+  // Test  7: CES test problem from Eaves and Schmedders (polynomial-integer form)
+  // Test  8: Leontief test problem (rational form)
+  // Test  9: Leontief test problem (polynomial form)
+  // Test 10: Leontief test problem from Polemarchakis (rational form)
+  // Test 11: Leontief test problem from Polemarchakis (polynomial form)
+  //
+  // Test 1 and 5 should give the same result (one solution).
+  // Test 2 and 6 should give the same result (two solutions).
+  // Test 4 and 7 should give the same result (six solutions, including extras and multiples).
+  //
+  // Test 4 and 7 find the most solutions.
+  
+  test7();
 
   return 0;
 }
